# finance-ai-api

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  startup.sh
.github/workflows/: backend-ci-cd.yml
alembic/: env.py
alembic/versions/: 31f4e8d7c2ab_enable_rls_on_alembic_version.py  4c4e2e9f6b1a_add_accounts_and_transaction_types.py  6bf0f8578784_drop_status_from_transactions.py  9c2df3d91a7a_enable_rls_on_public_tables.py  9ed2333b023d_merge_positive_transaction_amount_head.py  a1b2c3d4e5f6_add_balance_direction_for_ledger.py  a9f1c3d4e5b6_add_user_money_profile_and_fx_snapshots.py  b7c1d2e3f4a5_add_obligation_recurring_candidate_key.py  bfc04dbb3e27_init_schema.py  c1a2d3e4f5a6_add_policy_to_alembic_version.py  c8d9e1f2a3b4_add_ingestion_imports.py  d2f7a1b9c8de_drop_merchant_name_from_transactions.py  e1f2a3b4c5d6_add_import_analysis_metadata.py  e6b2c4d8f9a1_add_obligations.py  f3c4e5d6a7b8_merge_heads_after_fx_snapshot.py  f7c9a12b4d3e_enforce_positive_transaction_amount.py
app/: main.py
app/analytics/: __init__.py  category_breakdown.py  common.py  monthly_balance.py  recurring_candidates.py
app/core/: auth.py  (+3 more)
scripts/: seed_transactions_via_api.py
tests/: conftest.py  test_analytics_category_breakdown.py  test_analytics_recurring_candidates.py  test_analytics_summary.py  test_balance.py  test_cashflow.py  test_categories_transactions.py  test_cors_and_health.py  test_financial_accounts.py  test_fx_analytics.py  test_ingestion.py  test_ledger.py  test_ledger_migration.py  test_obligations.py  test_settings.py  test_users_me.py
(+47 files in other folders)
